# stars-h

./: CMakeLists.txt  Data.md  Jenkinsfile  README.md  Untitled Diagram.drawio
examples/problem/: CMakeLists.txt  spatial_space.c
include/: CMakeLists.txt  starsh-constants.h  starsh-fugaku_gc.h  starsh-mpi-starpu-kblas.h  starsh-particles.h  starsh-spatial-gsl.h  starsh-spatial.h  starsh-starpu-kblas.h  starsh.h
include/control/: init.h
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  electrodynamics.c  electrostatics.c  fugaku_gc.c  particles.c  spatial.c
src/backends/: CMakeLists.txt
src/backends/mpi/blrm/: dfe.c  drsdd.c
src/backends/mpi_starpu/blrm/: drsdd.c
src/backends/mpi_starpu_kblas/blrm/: drsdd.c
src/backends/mpi_starpu_kblas2/blrm/: drsdd.c
src/backends/mpi_starpu_kblas3_spatial/blrm/: drsdd.c
src/backends/openmp/blrm/: drsdd.c
src/backends/sequential/dense/: drsdd.c
src/backends/starpu/blrm/: drsdd.c
src/backends/starpu_cuda/: CMakeLists.txt
src/backends/starpu_cuda/blrm/: drsdd.c
src/backends/starpu_cuda/dense/: drsdd.c
src/backends/starpu_kblas/: CMakeLists.txt
src/backends/starpu_kblas/blrm/: drsdd.c
src/backends/starpu_kblas/dense/: CMakeLists.txt  drsdd.c  kernel.c
src/backends/starpu_kblas2/blrm/: drsdd.c
src/backends/starpu_kblas2/dense/: drsdd.c  kernel.c
src/backends/starpu_kblas3_spatial/: CMakeLists.txt
src/backends/starpu_kblas3_spatial/blrm/: drsdd.c
src/backends/starpu_kblas3_spatial/dense/: kernel.cu
src/control/: blrf.c  init.c
testing/: CMakeLists.txt  mpi_starpu_spatial.c  particles.c  spatial.c  starpu_spatial.c  starpu_spatial_gpu.c
